--- a/HW2_v1.Rmd
+++ b/HW2_v1.Rmd
@@ -46,9 +46,9 @@ HH070 - Total housing cost
 
 
 ```{r, include = FALSE}
-Data_h <- read_excel("/Users/charlottekasper/Desktop/Business Research Methods/Homework 2/Mappe1.xlsx", 
+Data_h <- read_excel("/Users/charlottekasper/Desktop/Business Research Methods/Homework 2/brm-homework/Mappe1.xlsx", 
     sheet = "h -household data")
-Data_d <- read_excel("/Users/charlottekasper/Desktop/Business Research Methods/Homework 2/Mappe1.xlsx", 
+Data_d <- read_excel("/Users/charlottekasper/Desktop/Business Research Methods/Homework 2/brm-homework/Mappe1.xlsx", 
     sheet = "d - household register")
 View(Data_h)
 names(Data_h)
